Add flex to header
Add flex to header

--- a/index.html
+++ b/index.html
@@ -7,51 +7,69 @@
     <title>WebStudio</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+
     <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
 
     <!--Top Line-->
-    <header class="page-header">
+    <header class="page-header header-line">
 
-      <nav class="site-nav">
-        <!-- Menu Nav -->
-        <a href="./index.html" class="logo">
-          WEB<span class="logo-item">STUDIO</span>
-        </a>
+      <div class="container flex-container">
 
-        <ul class="site-nav-item list">
-          <li class="site-nav-items"><a href="./index.html" class="site-nav-link">Studio</a></li>
-          <li class="site-nav-items"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
-          <li class="site-nav-items"><a href="" class="site-nav-link">Contacts</a></li>
-        </ul>
-      </nav>
-      
-      <address>
-        <ul class="site-adress list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="adress-items"> info@devstudio.com</a>
+        <nav class="site-nav">
+
+          <!-- Menu Nav -->
+          <a href="./index.html" class="logo">
+              WEB<span class="logo-item">STUDIO</span>
+          </a>
+
+          <ul class="site-nav-item list">
+            <li class="site-nav-items">
+              <a href="./index.html" class="site-nav-link">Studio</a>
             </li>
-            <li>
-              <a href="tel:+110001111111" class="adress-items">+11 (000) 111-11-11</a>
+            <li class="site-nav-items">
+              <a href="./portfolio.html" class="site-nav-link">Portfolio</a>
             </li>
-        </ul>
-      </address>
-      
+            <li class="site-nav-items">
+              <a href="" class="site-nav-link">Contacts</a>
+            </li>
+          </ul>
+
+        </nav>
+
+        <address class="address-container">
+
+            <ul class="site-adress list">
+                <li class="item">
+                  <a href="mailto:info@devstudio.com" class="adress-items"> info@devstudio.com</a>
+                </li>
+                <li class="item">
+                  <a href="tel:+110001111111" class="adress-items">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+
+        </address>
+
+      </div>
+
     </header>
 
     <main>
       <!--hero image-->
-      <section class="hero">
+      <section class="hero container">
         <h1 class="hero-caption">Effective Solutions <br>for Your Business</h1>
         <button type="button" class="hero-btn">Order Service</button>
       </section>
 
       <!--Feature-->
-      <section class="feature">
-        <h2 class="feature-caption">Feature</h2>
-        <ul class="feature-item">
+      <section class="feature container ">
+        <h2 class="visually-hidden">Feature</h2>
+        <ul class="feature-item list">
           <li class="feature-items">
             <h3 class="feature-captions">Strategy</h3>
             <p class="feature-title">
@@ -84,7 +102,7 @@
       </section>
 
       <!--What are we doing-->
-      <section class="work">
+      <section class="work container">
         <h2 class="general-title">What are we doing</h2>
         <ul class="work-item">
           <li>
@@ -100,7 +118,7 @@
       </section>
 
       <!--Our Team-->
-      <section class="team">
+      <section class="team container">
         <h2 class="general-title">Our Team</h2>
         <ul class="team-item list">
           <li class="team-items">
@@ -128,7 +146,7 @@
     </main>
 
     <!--Footer-->
-    <footer>
+    <footer class="container">
       <a href="./index.html" class="logo">
           WEB<span class="logo-item2">STUDIO</span>
         </a>
