--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@
       <!--hero image-->
       <section class="hero container">
         <h1 class="hero-caption">Effective Solutions <br>for Your Business</h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="btn-container">
+          <button type="button" class="hero-btn btn-padding">Order Service</button>
+        </div>
       </section>
 
       <!--Feature-->
-      <section class="feature container ">
+      <section class="feature container section">
         <h2 class="visually-hidden">Feature</h2>
         <ul class="feature-item list">
           <li class="feature-items">
             <h3 class="feature-captions">Strategy</h3>
-            <p class="feature-title">
-              Our goal is to identify the business problem to walk away with the
+            <p class="feature-title">Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
@@ -102,42 +103,42 @@
       </section>
 
       <!--What are we doing-->
-      <section class="work container">
+      <section class="work container section">
         <h2 class="general-title">What are we doing</h2>
-        <ul class="work-item">
-          <li>
+        <ul class="work-item list">
+          <li class="work-items">
             <img src="./images/img1.jpg" alt="Personal computer"  width="360">
           </li>
-          <li>
+          <li class="work-items">
             <img src="./images/img2.jpg"  alt="Rectangle 71" width="360">
           </li>
-          <li>
+          <li class="work-items">
             <img src="./images/img3.jpg" alt="Rectangle 71" width="360">
           </li>
         </ul>
       </section>
 
       <!--Our Team-->
-      <section class="team container">
+      <section class="team container section">
         <h2 class="general-title">Our Team</h2>
         <ul class="team-item list">
           <li class="team-items">
-            <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264">
+            <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" class="team-foto">
             <h3 class="team-title">Mark Guerrero</h3>
             <p class="team-prof">Product Designer</p>
           </li>
           <li class="team-items">
-            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264">
+            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" class="team-foto">
             <h3 class="team-title">Tom Ford</h3>
             <p class="team-prof">Frontend Developer</p>
           </li>
           <li class="team-items">
-            <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264">
+            <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" class="team-foto">
             <h3 class="team-title">Camila Garcia</h3>
             <p class="team-prof">Marketing</p>
           </li>
           <li class="team-items">
-            <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264">
+            <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" class="team-foto">
             <h3 class="team-title">Daniel Wilson</h3>
             <p class="team-prof">UI Designer</p>
           </li>
@@ -146,11 +147,14 @@
     </main>
 
     <!--Footer-->
-    <footer class="container">
-      <a href="./index.html" class="logo">
-          WEB<span class="logo-item2">STUDIO</span>
+    <footer class="footer">
+      <div class="footer-container">
+        <a href="./index.html" class="logo footer-logo">
+            WEB<span class="logo-item2">STUDIO</span>
         </a>
-      <p class="footer-desc"> Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.</p>
+        <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
     </footer>
+    
   </body>
 </html>
