--- a/portfolio.html
+++ b/portfolio.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>WebStudio</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
     crossorigin="anonymous" referrerpolicy="no-referrer">
-    
+
     <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+  </head>
+
+  <body>
 
     <!--Top Line-->
     <header class="page-header header-line">
@@ -59,72 +60,102 @@
     </header>
 
     <main>
-        <section>
-            <h1>Works</h1>
+        <section class="container">
+            <h1 class="visually-hidden">Works</h1>
             <ul class="btn list">
-                <li><button type="button" class="btn-item">All</button></li>
-                <li><button type="button" class="btn-item">Web Site</button></li>
-                <li><button type="button" class="btn-item">App</button></li>
-                <li><button type="button" class="btn-item">Design</button></li>
-                <li><button type="button" class="btn-item">Marketing</button></li>
+                <li class="btn-list">
+                  <button type="button" class="btn-item">All</button>
+                </li>
+                <li class="btn-list">
+                  <button type="button" class="btn-item">Web Site</button>
+                </li>
+                <li class="btn-list">
+                  <button type="button" class="btn-item">App</button>
+                </li>
+                <li class="btn-list">
+                  <button type="button" class="btn-item">Design</button>
+                </li>
+                <li class="btn-list">
+                  <button type="button" class="btn-item">Marketing</button>
+                </li>
             </ul>
 
-            <ul class="list">
-                <li>
-                    <img src="./images/banking-app.jpg" alt="banking app" width="360">
-                    <h2 class="work-title">Banking App Interface Concept</h2>
-                    <p class="work-desc">App</p>
+            <ul class="work-primery list">
+                <li class="work-item-list">
+                    <img src="./images/banking-app.jpg" alt="banking app" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Banking App Interface Concept</h2>
+                      <p class="work-desc">App</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/card-content.jpg" alt="Cashless Payment" width="360">
-                    <h2 class="work-title">Cashless Payment</h2>
-                    <p class="work-desc">Marketing</p>
+                <li class="work-item-list">
+                    <img src="./images/card-content.jpg" alt="Cashless Payment" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Cashless Payment</h2>
+                      <p class="work-desc">Marketing</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/meditaion-app.jpg" alt="Meditaion App" width="360">
-                    <h2 class="work-title">Meditaion App</h2>
-                    <p class="work-desc">App</p>
+                <li class="work-item-list">
+                    <img src="./images/meditaion-app.jpg" alt="Meditaion App" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Meditaion App</h2>
+                      <p class="work-desc">App</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360">
-                    <h2 class="work-title">Taxi Service</h2>
-                    <p class="work-desc">Marketing</p>
+                <li class="work-item-list">
+                    <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Taxi Service</h2>
+                      <p class="work-desc">Marketing</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
-                    <h2 class="work-title">Screen Illustrations</h2>
-                    <p class="work-desc">Design</p>
+                <li class="work-item-list">
+                    <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Screen Illustrations</h2>
+                      <p class="work-desc">Design</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
-                    <h2 class="work-title">Online Courses</h2>
-                    <p class="work-desc">Marketing</p>
+                <li class="work-item-list">
+                    <img src="./images/online-courses.jpg" alt="Online Courses" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Online Courses</h2>
+                      <p class="work-desc">Marketing</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/instagram-stories.jpg" alt="Instagram Stories Concept" width="360">
-                    <h2 class="work-title">Instagram Stories Concept</h2>
-                    <p class="work-desc">Design</p>
+                <li class="work-item-list">
+                    <img src="./images/instagram-stories.jpg" alt="Instagram Stories Concept" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Instagram Stories Concept</h2>
+                      <p class="work-desc">Design</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/organic-food.jpg" alt="Organic Food" width="360">
-                    <h2 class="work-title">Organic Food</h2>
-                    <p class="work-desc">Web Site</p>
+                <li class="work-item-list">
+                    <img src="./images/organic-food.jpg" alt="Organic Food" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Organic Food</h2>
+                      <p class="work-desc">Web Site</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                    <h2 class="work-title">Fresh Coffee</h2>
-                    <p class="work-desc">Web Site</p>
+                <li class="work-item-list">
+                    <img src="./images/fresh-coffee.jpg" alt="Fresh Coffee" width="360" class="work-img">
+                    <div class="work-cont-desc">
+                      <h2 class="work-title">Fresh Coffee</h2>
+                      <p class="work-desc">Web Site</p>
+                    </div>
                 </li>
             </ul>
         </section>
     </main>
 
     <!--Footer-->
-    <footer>
-      <a href="./index.html" class="logo">
-          WEB<span class="logo-item2">STUDIO</span>
+    <footer class="footer">
+      <div class="footer-container">
+        <a href="./index.html" class="logo footer-logo">
+            WEB<span class="logo-item2">STUDIO</span>
         </a>
-      <p class="footer-desc"> Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.</p>
+        <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
     </footer>
     
 </body>
