change in footer
change in footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
 
     <!--Footer-->
     <footer class="footer">
-      <div class="footer-container">
+      <div class="footer-container container">
         <a href="./index.html" class="logo footer-logo">
             WEB<span class="logo-item2">STUDIO</span>
         </a>
