--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <!--Footer-->
     <footer class="footer">
-      <div class="footer-container">
+      <div class="footer-container container">
         <a href="./index.html" class="logo footer-logo">
             WEB<span class="logo-item2">STUDIO</span>
         </a>
