--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>WebStudio</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
     crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -17,14 +17,14 @@
   <body>
 
     <!--Top Line-->
-    <header class="page-header header-line">
+    <header class="page-header">
 
-      <div class="container flex-container">
+      <div class="container flex-container header-line">
 
         <nav class="site-nav">
 
           <!-- Menu Nav -->
-          <a href="./index.html" class="logo">
+          <a href="./index.html" class="logo site-img">
               WEB<span class="logo-item">STUDIO</span>
           </a>
 
@@ -61,99 +61,125 @@
 
     <main>
       <!--hero image-->
-      <section class="hero container">
-        <h1 class="hero-caption">Effective Solutions <br>for Your Business</h1>
-        <div class="btn-container">
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-caption">Effective Solutions <br>for Your Business</h1>
           <button type="button" class="hero-btn btn-padding">Order Service</button>
         </div>
       </section>
 
       <!--Feature-->
-      <section class="feature container section">
-        <h2 class="visually-hidden">Feature</h2>
-        <ul class="feature-item list">
-          <li class="feature-items">
-            <h3 class="feature-captions">Strategy</h3>
-            <p class="feature-title">Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-items">
-            <h3 class="feature-captions">Punctuality</h3>
-            <p class="feature-title">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-items">
-            <h3 class="feature-captions">Diligence</h3>
-            <p class="feature-title">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-items">
-            <h3 class="feature-captions">Technologies</h3>
-            <p class="feature-title">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="feature section">
+
+        <div class="container">
+
+          <h2 class="visually-hidden">Feature</h2>
+          <ul class="feature-item list">
+            <li class="feature-items">
+              <h3 class="feature-captions">Strategy</h3>
+              <p class="feature-title">Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-items">
+              <h3 class="feature-captions">Punctuality</h3>
+              <p class="feature-title">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-items">
+              <h3 class="feature-captions">Diligence</h3>
+              <p class="feature-title">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-items">
+              <h3 class="feature-captions">Technologies</h3>
+              <p class="feature-title">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+
+        </div>
+        
       </section>
 
       <!--What are we doing-->
-      <section class="work container section">
-        <h2 class="general-title">What are we doing</h2>
-        <ul class="work-item list">
-          <li class="work-items">
-            <img src="./images/img1.jpg" alt="Personal computer"  width="360">
-          </li>
-          <li class="work-items">
-            <img src="./images/img2.jpg"  alt="Rectangle 71" width="360">
-          </li>
-          <li class="work-items">
-            <img src="./images/img3.jpg" alt="Rectangle 71" width="360">
-          </li>
-        </ul>
+      <section class="work section">
+        <div class="container">
+          <h2 class="general-title">What are we doing</h2>
+          <ul class="work-item list">
+            <li class="work-items">
+              <img src="./images/img1.jpg" alt="Personal computer"  width="360" class="site-img">
+            </li>
+            <li class="work-items">
+              <img src="./images/img2.jpg"  alt="Rectangle 71" width="360" class="site-img">
+            </li>
+            <li class="work-items">
+              <img src="./images/img3.jpg" alt="Rectangle 71" width="360" class="site-img">
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Our Team-->
-      <section class="team container section">
-        <h2 class="general-title">Our Team</h2>
-        <ul class="team-item list">
-          <li class="team-items">
-            <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" class="team-foto">
-            <h3 class="team-title">Mark Guerrero</h3>
-            <p class="team-prof">Product Designer</p>
-          </li>
-          <li class="team-items">
-            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" class="team-foto">
-            <h3 class="team-title">Tom Ford</h3>
-            <p class="team-prof">Frontend Developer</p>
-          </li>
-          <li class="team-items">
-            <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" class="team-foto">
-            <h3 class="team-title">Camila Garcia</h3>
-            <p class="team-prof">Marketing</p>
-          </li>
-          <li class="team-items">
-            <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" class="team-foto">
-            <h3 class="team-title">Daniel Wilson</h3>
-            <p class="team-prof">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+
+        <div class="container">
+
+          <h2 class="general-title">Our Team</h2>
+          <ul class="team-item list">
+            <li class="team-items">
+              <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" class="team-foto">
+              <div class="team-desc">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-prof">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-items">
+              <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" class="team-foto">
+              <div class="team-desc">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-prof">Frontend Developer</p>
+              </div>             
+            </li>
+            <li class="team-items">
+              <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" class="team-foto">
+              <div class="team-desc">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-prof">Marketing</p>
+              </div>
+            </li>
+            <li class="team-items">
+              <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" class="team-foto">
+              <div class="team-desc">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-prof">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+
+        </div>
+
       </section>
     </main>
 
     <!--Footer-->
     <footer class="footer">
-      <div class="footer-container container">
-        <a href="./index.html" class="logo footer-logo">
-            WEB<span class="logo-item2">STUDIO</span>
-        </a>
-        <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+
+      <div class="container">
+        <div class="footer-container">
+          <a href="./index.html" class="logo footer-logo">
+              WEB<span class="logo-item2">STUDIO</span>
+          </a>
+          <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
       </div>
+
     </footer>
     
   </body>
