--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,8 @@
     <title>WebStudio</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
     crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -60,7 +60,8 @@
     </header>
 
     <main>
-        <section class="container">
+        <section class="section  portfolio">
+          <div class="container">
             <h1 class="visually-hidden">Works</h1>
             <ul class="btn list">
                 <li class="btn-list">
@@ -82,80 +83,85 @@
 
             <ul class="work-primery list">
                 <li class="work-item-list">
-                    <img src="./images/banking-app.jpg" alt="banking app" width="360" class="work-img">
+                    <img src="./images/banking-app.jpg" alt="banking app" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Banking App Interface Concept</h2>
                       <p class="work-desc">App</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/card-content.jpg" alt="Cashless Payment" width="360" class="work-img">
+                    <img src="./images/card-content.jpg" alt="Cashless Payment" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Cashless Payment</h2>
                       <p class="work-desc">Marketing</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/meditaion-app.jpg" alt="Meditaion App" width="360" class="work-img">
+                    <img src="./images/meditaion-app.jpg" alt="Meditaion App" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Meditaion App</h2>
                       <p class="work-desc">App</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" class="work-img">
+                    <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Taxi Service</h2>
                       <p class="work-desc">Marketing</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360" class="work-img">
+                    <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Screen Illustrations</h2>
                       <p class="work-desc">Design</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/online-courses.jpg" alt="Online Courses" width="360" class="work-img">
+                    <img src="./images/online-courses.jpg" alt="Online Courses" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Online Courses</h2>
                       <p class="work-desc">Marketing</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/instagram-stories.jpg" alt="Instagram Stories Concept" width="360" class="work-img">
+                    <img src="./images/instagram-stories.jpg" alt="Instagram Stories Concept" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Instagram Stories Concept</h2>
                       <p class="work-desc">Design</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/organic-food.jpg" alt="Organic Food" width="360" class="work-img">
+                    <img src="./images/organic-food.jpg" alt="Organic Food" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Organic Food</h2>
                       <p class="work-desc">Web Site</p>
                     </div>
                 </li>
                 <li class="work-item-list">
-                    <img src="./images/fresh-coffee.jpg" alt="Fresh Coffee" width="360" class="work-img">
+                    <img src="./images/fresh-coffee.jpg" alt="Fresh Coffee" width="360" class="site-img">
                     <div class="work-cont-desc">
                       <h2 class="work-title">Fresh Coffee</h2>
                       <p class="work-desc">Web Site</p>
                     </div>
                 </li>
             </ul>
+          </div>
         </section>
     </main>
 
     <!--Footer-->
     <footer class="footer">
-      <div class="footer-container container">
-        <a href="./index.html" class="logo footer-logo">
-            WEB<span class="logo-item2">STUDIO</span>
-        </a>
-        <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+
+      <div class="container">
+        <div class="footer-container">
+          <a href="./index.html" class="logo footer-logo">
+              WEB<span class="logo-item2">STUDIO</span>
+          </a>
+          <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
       </div>
+
     </footer>
     
 </body>
