--- a/index.html
+++ b/index.html
@@ -134,28 +134,28 @@
           <h2 class="general-title">Our Team</h2>
           <ul class="team-item list">
             <li class="team-items">
-              <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" class="team-foto">
+              <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" class="site-img team-foto">
               <div class="team-desc">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-prof">Product Designer</p>
               </div>
             </li>
             <li class="team-items">
-              <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" class="team-foto">
+              <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" class="site-img team-foto">
               <div class="team-desc">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-prof">Frontend Developer</p>
               </div>             
             </li>
             <li class="team-items">
-              <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" class="team-foto">
+              <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" class="site-img team-foto">
               <div class="team-desc">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-prof">Marketing</p>
               </div>
             </li>
             <li class="team-items">
-              <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" class="team-foto">
+              <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" class="site-img team-foto">
               <div class="team-desc">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-prof">UI Designer</p>
